tests/ui/cast/ptr-to-trait-obj-add-auto.stderr
error[E0277]: the trait bound `dyn Trait<'_>: Unsize<dyn Trait<'_> + Send>` is not satisfied
  --> $DIR/ptr-to-trait-obj-add-auto.rs:6:5
   |
LL |     x as _
   |     ^^^^^^ the trait `Unsize<dyn Trait<'_> + Send>` is not implemented for `dyn Trait<'_>`
   |
   = note: all implementations of `Unsize` are provided automatically by the compiler, see <https://doc.rust-lang.org/stable/std/marker/trait.Unsize.html> for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
